Updated System Testing with Squish (markdown)